[gd_scene load_steps=4 format=3 uid="uid://babiwjjvyybhn"]

[ext_resource type="Script" path="res://scripts/upgrades_panel.gd" id="1_0geyc"]
[ext_resource type="Texture2D" uid="uid://dy4uwsmi2rrfb" path="res://assets/backgrounds/Rectangle 16.png" id="1_kc74l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d4rhg"]
texture = ExtResource("1_kc74l")

[node name="UpgradesPanel" type="Panel"]
offset_left = -3.0
offset_top = -3.0
offset_right = 1280.0
offset_bottom = 716.0
theme_override_styles/panel = SubResource("StyleBoxTexture_d4rhg")
script = ExtResource("1_0geyc")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 493.0
offset_top = 37.0
offset_right = 573.0
offset_bottom = 61.0
scale = Vector2(3.4, 3.4)
text = "UPGRADES"

[node name="Label2" type="Label" parent="."]
offset_left = 285.0
offset_top = 128.0
offset_right = 405.0
offset_bottom = 151.0
text = "Media Control"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 578.0
offset_top = 126.0
offset_right = 698.0
offset_bottom = 149.0
text = "Spreading Power"

[node name="CategoryContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 186.0
offset_top = 167.0
offset_right = 1108.0
offset_bottom = 612.0

[node name="SpreadingPower" type="VBoxContainer" parent="CategoryContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="UpgradeButton" type="Button" parent="CategoryContainer/SpreadingPower"]
layout_mode = 2

[node name="UpgradeButton2" type="Button" parent="CategoryContainer/SpreadingPower"]
layout_mode = 2

[node name="UpgradeButton3" type="Button" parent="CategoryContainer/SpreadingPower"]
layout_mode = 2

[node name="UpgradeButton4" type="Button" parent="CategoryContainer/SpreadingPower"]
layout_mode = 2

[node name="UpgradeButton5" type="Button" parent="CategoryContainer/SpreadingPower"]
layout_mode = 2

[node name="MediaControl" type="VBoxContainer" parent="CategoryContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="UpgradeButton" type="Button" parent="CategoryContainer/MediaControl"]
layout_mode = 2

[node name="UpgradeButton2" type="Button" parent="CategoryContainer/MediaControl"]
layout_mode = 2

[node name="UpgradeButton3" type="Button" parent="CategoryContainer/MediaControl"]
layout_mode = 2

[node name="UpgradeButton4" type="Button" parent="CategoryContainer/MediaControl"]
layout_mode = 2

[node name="UpgradeButton5" type="Button" parent="CategoryContainer/MediaControl"]
layout_mode = 2

[node name="GovernmentResistance" type="VBoxContainer" parent="CategoryContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="UpgradeButton" type="Button" parent="CategoryContainer/GovernmentResistance"]
layout_mode = 2

[node name="UpgradeButton2" type="Button" parent="CategoryContainer/GovernmentResistance"]
layout_mode = 2

[node name="UpgradeButton3" type="Button" parent="CategoryContainer/GovernmentResistance"]
layout_mode = 2

[node name="UpgradeButton4" type="Button" parent="CategoryContainer/GovernmentResistance"]
layout_mode = 2

[node name="UpgradeButton5" type="Button" parent="CategoryContainer/GovernmentResistance"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 615.0
offset_right = 94.0
offset_bottom = 646.0
scale = Vector2(2.64, 2.83384)
text = "Back"

[node name="Label3" type="Label" parent="."]
offset_left = 854.0
offset_top = 126.0
offset_right = 1026.0
offset_bottom = 149.0
text = "Government Resistance"
